Fixed modal overflow and touchmoving menu cursor

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
     }
     > .modal-close-button.clickable-icon {
         display: none;
